--- a/packages/sortable-list-component/index.html
+++ b/packages/sortable-list-component/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style='width: 100%; height: 100%'>
   <head>
     <meta charset="utf-8" />
     <title>SortableListComponent</title>
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
-  <body>
-    <div id="root"></div>
+  <body style='width: 100%; height: 100%'>
+    <div id="root" style='height: 100%; width: 100%'></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
